@@ -25,7 +25,7 @@ SVN version:
 
 """,
       classifiers=[
-      'Development Status :: 4 - Beta',
+      "Development Status :: 5 - Production/Stable",
       'Environment :: Web Environment',
       'Intended Audience :: Developers',
       'Programming Language :: Python',
