@@ -1,9 +1,16 @@
 0.3
-- Python 2.3 support is dropped (who can resist
-  @decorators) [ticket:123]
+- Python 2.3 support is dropped. [ticket:123]
   
 - Unit tests now run with nose.  [ticket:127]
 
+- Source code escaping has been simplified.
+  In particular, module source files are now 
+  generated with the Python "magic encoding 
+  comment", and source code is passed through 
+  mostly unescaped, except for that code which
+  is regenerated from parsed Python source.
+  This fixes usage of unicode in 
+  <%namespace:defname> tags.  [ticket:99]
   
 0.2.6
 
